--- a/styles/architects.css
+++ b/styles/architects.css
@@ -8,3 +8,49 @@
   font-style: normal;
 }
 
+/* Shared Styles */
+.display-flex{
+    display: flex;
+}
+/* Dark 02 */
+.text-gray{
+    color: #424242;
+}
+/* Dark 03 */
+.text-light-gray{
+    color: #727272;
+}
+
+.bg-light{
+    background-color: rgba(255, 144, 14, 0.1);
+}
+
+/* Header Styles */
+
+/* Navbar Related Styles */
+.navbar{
+   justify-content: space-between;
+   align-items: center;
+}
+
+.brand{
+    font-weight: 700;
+    font-size: 3rem;
+}
+
+.nav-item{
+    list-style: none;
+    margin-right: 30px;
+
+}
+
+.nav-link{
+    text-decoration: none;
+    font-weight: medium;
+}
+
+.navbar, .banner{
+    max-width: 1440px;
+    margin: 0 auto;
+
+}
