--- a/styles/architects.css
+++ b/styles/architects.css
@@ -24,7 +24,15 @@
 .bg-light{
     background-color: rgba(255, 144, 14, 0.1);
 }
-
+.btn-primary{
+    background-color: rgba(255, 144, 14, 1);
+    color: rgba(255, 255, 255, 1);
+    padding: 20px 25px;
+    font-size: 1.25rem;
+    border-radius: 8px;
+    border: none;
+    
+}
 /* Header Styles */
 
 /* Navbar Related Styles */
@@ -53,4 +61,22 @@
     max-width: 1440px;
     margin: 0 auto;
 
+}
+
+/* Banner Realted Styles */
+
+.banner-content{
+    max-width: 850px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.banner-title{
+    font-weight: 700;
+    font-size: 4rem;
+}
+
+.banner-image{
+   width: 100%;
 }
