--- a/styles/architects.css
+++ b/styles/architects.css
@@ -80,3 +80,13 @@
 .banner-image{
    width: 100%;
 }
+
+
+
+/* Responsive media query */
+
+@media  screen and (max-width: 576px) {
+    .navbar, .nav-links{
+        flex-direction: column;
+    }
+}
