--- a/styles/architects.css
+++ b/styles/architects.css
@@ -29,10 +29,19 @@
     color: rgba(255, 255, 255, 1);
     padding: 20px 25px;
     font-size: 1.25rem;
+    font-weight: 600;
     border-radius: 8px;
     border: none;
-    
+    /* width: 180px; */
 }
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+main > section{
+    margin-top: 130px;
+}
+
 /* Header Styles */
 
 /* Navbar Related Styles */
@@ -81,8 +90,32 @@
    width: 100%;
 }
 
+/* team and feature realted styles */
 
+.teams{
+    align-items: center;
+}
 
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+
+.our-features{
+    margin-left: 130px;
+    max-width: 520px;
+}
+.feature-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+.quick-list{
+    font-weight: 500;
+}
+#features{
+    color: rgba(255, 144, 14, 1);
+}
 /* Responsive media query */
 
 @media  screen and (max-width: 576px) {
