--- a/styles/architects.css
+++ b/styles/architects.css
@@ -12,6 +12,9 @@
 .display-flex{
     display: flex;
 }
+.text-primary{
+    color:#FF900E;
+}
 /* Dark 02 */
 .text-gray{
     color: #424242;
@@ -119,7 +122,15 @@ main > section{
 /* Responsive media query */
 
 @media  screen and (max-width: 576px) {
-    .navbar, .nav-links{
+    .navbar, 
+    .nav-links, 
+    .teams {
         flex-direction: column;
+    }
+    .team-img-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .our-features{
+         margin-left: 20px;
     }
 }
