medium size device responsive added

--- a/styles/architects.css
+++ b/styles/architects.css
@@ -134,3 +134,14 @@ main > section{
          margin-left: 20px;
     }
 }
+
+/* medium size device */
+
+@media  screen and (min-width: 576px)   and (max-width: 992px) {
+    .teams{
+        flex-direction: column;
+    }
+    .our-features{
+         margin: 50px auto;
+    }
+}
