--- a/styles/architects.css
+++ b/styles/architects.css
@@ -44,6 +44,10 @@ main{
 main > section{
     margin-top: 130px;
 }
+.section-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+}
 
 /* Header Styles */
 
@@ -109,10 +113,7 @@ main > section{
     margin-left: 130px;
     max-width: 520px;
 }
-.feature-title{
-    font-size: 2.8rem;
-    font-weight: 700;
-}
+
 .quick-list{
     font-weight: 500;
 }
