--- a/styles/architects.css
+++ b/styles/architects.css
@@ -152,7 +152,26 @@ main > section{
 
 .fact-description{
     max-width: 540px;
+
 }
+
+/* Sponsor Related Info */
+
+.sponsor-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+
+.sponsor-companies{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+
+.sponsor-companies img{
+    filter: grayscale(100%);
+}
+
 /* Responsive media query */
 
 @media  screen and (max-width: 576px) {
@@ -161,8 +180,15 @@ main > section{
     .teams {
         flex-direction: column;
     }
-    .team-img-container{
+    .team-img-container,
+    .facts-container,
+    .sponsor-companies{
         grid-template-columns: repeat(1, 1fr);
+    }
+    .facts-container,
+    .sponsor-companies{
+        justify-items: center;
+        gap: 24px;
     }
     .our-features{
          margin-left: 20px;
@@ -177,5 +203,11 @@ main > section{
     }
     .our-features{
          margin: 50px auto;
+    }
+    .sponsor-companies,
+    .facts-container{
+        grid-template-columns: repeat(2, 1fr);
+        gap: 50px;
+        justify-items: center;
     }
 }
