some spelling mistake solved

--- a/styles/architects.css
+++ b/styles/architects.css
@@ -79,7 +79,7 @@ main > section{
 
 }
 
-/* Banner Realted Styles */
+/* Banner Related Styles */
 
 .banner-content{
     max-width: 850px;
@@ -97,7 +97,7 @@ main > section{
    width: 100%;
 }
 
-/* team and feature realted styles */
+/* team and feature Related styles */
 
 .teams{
     align-items: center;
