--- a/styles/architects.css
+++ b/styles/architects.css
@@ -146,8 +146,18 @@ main > section{
     margin-bottom: 0px;
 }
 
+#experience-badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -100px;
 
-
+}
+#experience-year{
+    font-size: 4rem;
+    font-weight: 700;
+}
 /* Some Facts Related Style */
 .facts-container{
     display: grid;
