--- a/styles/architects.css
+++ b/styles/architects.css
@@ -158,6 +158,9 @@ main > section{
     font-size: 4rem;
     font-weight: 700;
 }
+.featured-architect img{
+    width: 100%;
+}
 /* Some Facts Related Style */
 .facts-container{
     display: grid;
@@ -214,7 +217,8 @@ main > section{
 @media  screen and (max-width: 576px) {
     .navbar, 
     .nav-links, 
-    .teams {
+    .teams,
+    .features {
         flex-direction: column;
     }
     .team-img-container,
@@ -230,12 +234,17 @@ main > section{
     .our-features{
          margin-left: 20px;
     }
+
+    #experience-badge{
+        margin-top: 20px;
+        margin-left: 20px;
+    }
 }
 
 /* medium size device */
 
 @media  screen and (min-width: 576px)   and (max-width: 992px) {
-    .teams{
+    .teams, .features{
         flex-direction: column;
     }
     .our-features{
@@ -246,5 +255,10 @@ main > section{
         grid-template-columns: repeat(2, 1fr);
         gap: 50px;
         justify-items: center;
+    }
+     #experience-badge{
+        margin-top: 20px;
+        margin-left: 20px;
+        
     }
 }
