footer section design

--- a/styles/architects.css
+++ b/styles/architects.css
@@ -212,6 +212,16 @@ main > section{
     filter: grayscale(100%);
 }
 
+/* footer section design */
+.footer-container{
+    max-width: 1440px;
+    margin: 0 auto;
+    border-radius: 8px;
+    margin-top: 130px;
+}
+.footer-text{
+    padding: 39px 410px;
+}
 /* Responsive media query */
 
 @media  screen and (max-width: 576px) {
